--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,20 @@
-body {
+@import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Mono&display=swap');
+
+* {
   margin: 0;
+  padding: 0;
+}
+
+body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
+  background-color: #111111 !important;
+  color: #7FDBFF !important;
+  font-family: 'Open Sans', sans-serif !important;
+}  
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
